Add limpeza.ipynb in Projeto CENIPA

--- a/Projeto CENIPA/extracao.ipynb
+++ b/Projeto CENIPA/extracao.ipynb
@@ -19,8 +19,7 @@
    "execution_count": 53,
    "source": [
     "import pandas as pd\n",
-    "import pandera as pa\n",
-    "import numpy as np"
+    "import pandera as pa"
    ],
    "outputs": [],
    "metadata": {}
@@ -496,251 +495,34 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 58,
+   "cell_type": "markdown",
    "source": [
-    "dataframe['ocorrencia_uf']= dataframe['ocorrencia_uf'].replace(['***','**'])"
+    "Quando o algum valor do atributo não esta no format esperado pelo schema, ele para a validação, retornando o index do valor que nao esta coforme o formato estabelecido. O dataframe utilizado no projeto, não passou pela primeira validação.\n",
+    "``` \n",
+    "SchemaError: <Schema Column(name=ocorrencia_uf, type=str)> failed element-wise validator 0:\n",
+    "<Check str_length: str_length(2, 2)>\n",
+    "failure cases:\n",
+    "   index failure_case\n",
+    "0   2227\n",
+    "```\n"
    ],
-   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Em seguida, trata-se o erro retornado, para validar novamente o dataframe"
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 58,
    "source": [
-    "dataframe"
+    "dataframe['ocorrencia_uf']= dataframe['ocorrencia_uf'].replace(['***','**'])\n",
+    "dataframe.head()"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "      codigo_ocorrencia  codigo_ocorrencia2 ocorrencia_classificacao  \\\n",
-       "0                 40211               40211                INCIDENTE   \n",
-       "1                 40349               40349                INCIDENTE   \n",
-       "2                 40351               40351                INCIDENTE   \n",
-       "3                 39527               39527                 ACIDENTE   \n",
-       "4                 40324               40324                INCIDENTE   \n",
-       "...                 ...                 ...                      ...   \n",
-       "5747              79804               79804                INCIDENTE   \n",
-       "5748              79757               79757          INCIDENTE GRAVE   \n",
-       "5749              79802               79802                INCIDENTE   \n",
-       "5750              79756               79756          INCIDENTE GRAVE   \n",
-       "5751              79844               79844                INCIDENTE   \n",
-       "\n",
-       "       ocorrencia_cidade ocorrencia_uf ocorrencia_pais ocorrencia_aerodromo  \\\n",
-       "0         RIO DE JANEIRO            RJ          BRASIL                 ****   \n",
-       "1                  BELÉM            PA          BRASIL                 SBBE   \n",
-       "2         RIO DE JANEIRO            RJ          BRASIL                 SBRJ   \n",
-       "3     LUCAS DO RIO VERDE            MT          BRASIL                 ****   \n",
-       "4                PELOTAS            RS          BRASIL                 SBPK   \n",
-       "...                  ...           ...             ...                  ...   \n",
-       "5747            CAMPINAS            SP          BRASIL                 SBKP   \n",
-       "5748   LAGOA DA CONFUSÃO            TO          BRASIL                 ****   \n",
-       "5749      RIO DE JANEIRO            RJ          BRASIL                 SBGL   \n",
-       "5750           VICENTINA            MS          BRASIL                 ****   \n",
-       "5751      RIO DE JANEIRO            RJ          BRASIL                 SBJR   \n",
-       "\n",
-       "     ocorrencia_dia ocorrencia_hora  total_recomendacoes  \n",
-       "0        2010-01-03        12:00:00                    0  \n",
-       "1        2010-01-03        11:05:00                    0  \n",
-       "2        2010-01-03        03:00:00                    0  \n",
-       "3        2010-01-04        17:30:00                    0  \n",
-       "4        2010-01-05        19:25:00                    0  \n",
-       "...             ...             ...                  ...  \n",
-       "5747     2020-12-29        19:00:00                    0  \n",
-       "5748     2020-12-30        18:30:00                    0  \n",
-       "5749     2020-12-30        00:54:00                    0  \n",
-       "5750     2020-12-31        09:00:00                    0  \n",
-       "5751     2020-12-31        13:24:00                    0  \n",
-       "\n",
-       "[5752 rows x 10 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>codigo_ocorrencia</th>\n",
-       "      <th>codigo_ocorrencia2</th>\n",
-       "      <th>ocorrencia_classificacao</th>\n",
-       "      <th>ocorrencia_cidade</th>\n",
-       "      <th>ocorrencia_uf</th>\n",
-       "      <th>ocorrencia_pais</th>\n",
-       "      <th>ocorrencia_aerodromo</th>\n",
-       "      <th>ocorrencia_dia</th>\n",
-       "      <th>ocorrencia_hora</th>\n",
-       "      <th>total_recomendacoes</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>40211</td>\n",
-       "      <td>40211</td>\n",
-       "      <td>INCIDENTE</td>\n",
-       "      <td>RIO DE JANEIRO</td>\n",
-       "      <td>RJ</td>\n",
-       "      <td>BRASIL</td>\n",
-       "      <td>****</td>\n",
-       "      <td>2010-01-03</td>\n",
-       "      <td>12:00:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>40349</td>\n",
-       "      <td>40349</td>\n",
-       "      <td>INCIDENTE</td>\n",
-       "      <td>BELÉM</td>\n",
-       "      <td>PA</td>\n",
-       "      <td>BRASIL</td>\n",
-       "      <td>SBBE</td>\n",
-       "      <td>2010-01-03</td>\n",
-       "      <td>11:05:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>40351</td>\n",
-       "      <td>40351</td>\n",
-       "      <td>INCIDENTE</td>\n",
-       "      <td>RIO DE JANEIRO</td>\n",
-       "      <td>RJ</td>\n",
-       "      <td>BRASIL</td>\n",
-       "      <td>SBRJ</td>\n",
-       "      <td>2010-01-03</td>\n",
-       "      <td>03:00:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>39527</td>\n",
-       "      <td>39527</td>\n",
-       "      <td>ACIDENTE</td>\n",
-       "      <td>LUCAS DO RIO VERDE</td>\n",
-       "      <td>MT</td>\n",
-       "      <td>BRASIL</td>\n",
-       "      <td>****</td>\n",
-       "      <td>2010-01-04</td>\n",
-       "      <td>17:30:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>40324</td>\n",
-       "      <td>40324</td>\n",
-       "      <td>INCIDENTE</td>\n",
-       "      <td>PELOTAS</td>\n",
-       "      <td>RS</td>\n",
-       "      <td>BRASIL</td>\n",
-       "      <td>SBPK</td>\n",
-       "      <td>2010-01-05</td>\n",
-       "      <td>19:25:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5747</th>\n",
-       "      <td>79804</td>\n",
-       "      <td>79804</td>\n",
-       "      <td>INCIDENTE</td>\n",
-       "      <td>CAMPINAS</td>\n",
-       "      <td>SP</td>\n",
-       "      <td>BRASIL</td>\n",
-       "      <td>SBKP</td>\n",
-       "      <td>2020-12-29</td>\n",
-       "      <td>19:00:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5748</th>\n",
-       "      <td>79757</td>\n",
-       "      <td>79757</td>\n",
-       "      <td>INCIDENTE GRAVE</td>\n",
-       "      <td>LAGOA DA CONFUSÃO</td>\n",
-       "      <td>TO</td>\n",
-       "      <td>BRASIL</td>\n",
-       "      <td>****</td>\n",
-       "      <td>2020-12-30</td>\n",
-       "      <td>18:30:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5749</th>\n",
-       "      <td>79802</td>\n",
-       "      <td>79802</td>\n",
-       "      <td>INCIDENTE</td>\n",
-       "      <td>RIO DE JANEIRO</td>\n",
-       "      <td>RJ</td>\n",
-       "      <td>BRASIL</td>\n",
-       "      <td>SBGL</td>\n",
-       "      <td>2020-12-30</td>\n",
-       "      <td>00:54:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5750</th>\n",
-       "      <td>79756</td>\n",
-       "      <td>79756</td>\n",
-       "      <td>INCIDENTE GRAVE</td>\n",
-       "      <td>VICENTINA</td>\n",
-       "      <td>MS</td>\n",
-       "      <td>BRASIL</td>\n",
-       "      <td>****</td>\n",
-       "      <td>2020-12-31</td>\n",
-       "      <td>09:00:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5751</th>\n",
-       "      <td>79844</td>\n",
-       "      <td>79844</td>\n",
-       "      <td>INCIDENTE</td>\n",
-       "      <td>RIO DE JANEIRO</td>\n",
-       "      <td>RJ</td>\n",
-       "      <td>BRASIL</td>\n",
-       "      <td>SBJR</td>\n",
-       "      <td>2020-12-31</td>\n",
-       "      <td>13:24:00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5752 rows × 10 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 59
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
